Opened 15 years ago
Closed 14 years ago
#4430 closed bug (fixed)
Debugger does not notice thread name changes
Reported by: | anevilyak | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Debugger | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is most easily observable by running Tracker in the debugger. When Tracker creates a window, it is initially named TrackerWindow and then updated to indicate the folder name once the PoseView is added to it, which results in BWindow also issuing a rename_thread() to match the thread name to the new window title. However, the Debugger never notices this name change and simply shows it as w>TrackerWindow the entire time.
Change History (6)
comment:1 by , 15 years ago
comment:2 by , 14 years ago
Version: | R1/pre-alpha1 → R1/Development |
---|
comment:3 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
comment:4 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
comment:5 by , 14 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Reopened pending refactoring/rewrite of the previous changes.
Note:
See TracTickets
for help on using tickets.
This is indeed a missing feature. The debugger retrieves dynamic information about the debugged team only via the debugger API, which ATM doesn't feature any notifications for changes of thread name or priority. One could periodically poll get_thread_info() for all threads, but the more elegant solution would be to extend the debugger API, I guess.