Implement support for catching rename and thread priority change events. This lets us keep up to date with thread names, which makes, for example Tracker a bit more tolerable to debug since it employs thread renaming to set the names of its windows.

Implements #4430.



git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39847 a95241bf-73f2-0310-859d-f6bbb57e9c96